@@ -6,18 +6,18 @@
  */
 package org.gridsuite.shortcircuit.server.service;
 
-import com.powsybl.ws.commons.LogUtils;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.powsybl.ws.commons.LogUtils;
 import org.gridsuite.shortcircuit.server.dto.*;
 import org.gridsuite.shortcircuit.server.entities.*;
 import org.gridsuite.shortcircuit.server.repositories.ShortCircuitAnalysisResultRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -61,11 +61,11 @@ public class ShortCircuitService {
     private static ShortCircuitAnalysisResult fromEntity(ShortCircuitAnalysisResultEntity resultEntity, FaultResultsMode mode) {
         List<FaultResult> faultResults = new ArrayList<>();
         switch (mode) {
-            case FULL:
-                faultResults = resultEntity.getFaultResults().stream().map(fr -> fromEntity(fr)).collect(Collectors.toList());
+            case BASIC, FULL:
+                faultResults = resultEntity.getFaultResults().stream().map(fr -> fromEntity(fr, mode)).toList();
                 break;
             case WITH_LIMIT_VIOLATIONS:
-                faultResults = resultEntity.getFaultResults().stream().filter(fr -> !fr.getLimitViolations().isEmpty()).map(fr -> fromEntity(fr)).collect(Collectors.toList());
+                faultResults = resultEntity.getFaultResults().stream().filter(fr -> !fr.getLimitViolations().isEmpty()).map(fr -> fromEntity(fr, mode)).toList();
                 break;
             case NONE:
             default:
@@ -74,14 +74,19 @@ public class ShortCircuitService {
         return new ShortCircuitAnalysisResult(resultEntity.getResultUuid(), resultEntity.getWriteTimeStamp(), faultResults);
     }
 
-    private static FaultResult fromEntity(FaultResultEntity faultResultEntity) {
+    private static FaultResult fromEntity(FaultResultEntity faultResultEntity, FaultResultsMode mode) {
         Fault fault = fromEntity(faultResultEntity.getFault());
         double current = faultResultEntity.getCurrent();
         double positiveMagnitude = faultResultEntity.getPositiveMagnitude();
         double shortCircuitPower = faultResultEntity.getShortCircuitPower();
         ShortCircuitLimits shortCircuitLimits = new ShortCircuitLimits(faultResultEntity.getIpMin(), faultResultEntity.getIpMax(), faultResultEntity.getDeltaCurrentIpMin(), faultResultEntity.getDeltaCurrentIpMax());
-        List<LimitViolation> limitViolations = faultResultEntity.getLimitViolations().stream().map(lv -> fromEntity(lv)).collect(Collectors.toList());
-        List<FeederResult> feederResults = faultResultEntity.getFeederResults().stream().map(fr -> fromEntity(fr)).collect(Collectors.toList());
+        List<LimitViolation> limitViolations = new ArrayList<>();
+        List<FeederResult> feederResults = new ArrayList<>();
+        if (mode != FaultResultsMode.BASIC) {
+            // if we enter here, by calling the getters, the limit violations and feeder results will be loaded even if we don't want to in some mode
+            limitViolations = faultResultEntity.getLimitViolations().stream().map(ShortCircuitService::fromEntity).toList();
+            feederResults = faultResultEntity.getFeederResults().stream().map(ShortCircuitService::fromEntity).toList();
+        }
         return new FaultResult(fault, current, positiveMagnitude, shortCircuitPower, limitViolations, feederResults, shortCircuitLimits);
     }
 
@@ -94,8 +99,8 @@ public class ShortCircuitService {
                 limitViolationEmbeddable.getLimit(), limitViolationEmbeddable.getLimitName(), limitViolationEmbeddable.getValue());
     }
 
-    private static FeederResult fromEntity(FeederResultEmbeddable feederResultEmbeddable) {
-        return new FeederResult(feederResultEmbeddable.getConnectableId(), feederResultEmbeddable.getCurrent(), feederResultEmbeddable.getPositiveMagnitude());
+    private static FeederResult fromEntity(FeederResultEntity feederResultEntity) {
+        return new FeederResult(feederResultEntity.getConnectableId(), feederResultEntity.getCurrent(), feederResultEntity.getPositiveMagnitude());
     }
 
     private static ShortCircuitAnalysisResultEntity sortByElementId(ShortCircuitAnalysisResultEntity result) {
@@ -110,6 +115,9 @@ public class ShortCircuitService {
         startTime.set(System.nanoTime());
         Optional<ShortCircuitAnalysisResultEntity> result;
         switch (mode) {
+            case BASIC:
+                result = resultRepository.findWithFaultResults(resultUuid);
+                break;
             case FULL:
                 result = resultRepository.findFullResults(resultUuid);
                 break;
@@ -125,38 +133,57 @@ public class ShortCircuitService {
             ShortCircuitAnalysisResultEntity sortedResult = sortByElementId(result.get());
 
             ShortCircuitAnalysisResult res = fromEntity(sortedResult, mode);
-            LOGGER.info("Get ShortCircuit Results {} in {}ms", resultUuid, TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startTime.get()));
+            if (LOGGER.isInfoEnabled()) {
+                LOGGER.info("Get ShortCircuit Results {} in {}ms", resultUuid, TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startTime.get()));
+            }
             return res;
         }
         return null;
     }
 
-    public Page<FaultResult> getFaultResultsPage(UUID resultUuid, FaultResultsMode mode, Pageable pageable) {
+    @Transactional(readOnly = true)
+    public Page<FaultResult> getFaultResultsPage(UUID resultUuid, FaultResultsMode mode, List<ResourceFilter> resourceFilters, Pageable pageable) {
         AtomicReference<Long> startTime = new AtomicReference<>();
         startTime.set(System.nanoTime());
         Optional<ShortCircuitAnalysisResultEntity> result;
         // get without faultResults : FaultResultsM.NONE
         result = resultRepository.find(resultUuid);
         if (result.isPresent()) {
-            Optional<Page<FaultResultEntity>> faultResultEntitiesPage = Optional.empty();
+            Page<FaultResultEntity> faultResultEntitiesPage = Page.empty();
             switch (mode) {
-                case FULL:
-                    faultResultEntitiesPage = resultRepository.findFaultResultsPage(result.get(), pageable);
+                case BASIC, FULL:
+                    faultResultEntitiesPage = resultRepository.findFaultResultsPage(result.get(), resourceFilters, pageable, mode);
                     break;
                 case WITH_LIMIT_VIOLATIONS:
-                    faultResultEntitiesPage = resultRepository.findFaultResultsWithLimitViolationsPage(result.get(), pageable);
+                    faultResultEntitiesPage = resultRepository.findFaultResultsWithLimitViolationsPage(result.get(), resourceFilters, pageable);
                     break;
                 case NONE:
                 default:
                     break;
             }
-            if (faultResultEntitiesPage.isPresent()) {
-                Page<FaultResult> faultResultsPage = faultResultEntitiesPage.get().map(fr -> fromEntity(fr));
+            Page<FaultResult> faultResultsPage = faultResultEntitiesPage.map(fr -> fromEntity(fr, mode));
+            if (LOGGER.isInfoEnabled()) {
                 LOGGER.info("Get ShortCircuit Results {} in {}ms", resultUuid, TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startTime.get()));
-                String pageableStr = LogUtils.sanitizeParam(pageable.toString());
-                LOGGER.info("pageable =  {}", pageableStr);
-                return faultResultsPage;
+                LOGGER.info("pageable =  {}", LogUtils.sanitizeParam(pageable.toString()));
             }
+            return faultResultsPage;
+        }
+        return null;
+    }
+
+    @Transactional(readOnly = true)
+    public Page<FeederResult> getFeederResultsPage(UUID resultUuid, List<ResourceFilter> resourceFilters, Pageable pageable) {
+        AtomicReference<Long> startTime = new AtomicReference<>();
+        startTime.set(System.nanoTime());
+        Optional<ShortCircuitAnalysisResultEntity> result = resultRepository.find(resultUuid);
+        if (result.isPresent()) {
+            Page<FeederResultEntity> feederResultEntitiesPage = resultRepository.findFeederResultsPage(result.get(), resourceFilters, pageable);
+            Page<FeederResult> feederResultsPage = feederResultEntitiesPage.map(ShortCircuitService::fromEntity);
+            if (LOGGER.isInfoEnabled()) {
+                LOGGER.info("Get ShortCircuit Results {} in {}ms", resultUuid, TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startTime.get()));
+                LOGGER.info("pageable =  {}", LogUtils.sanitizeParam(pageable.toString()));
+            }
+            return feederResultsPage;
         }
         return null;
     }
